// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtensionsQueryInputToolbar renders 1`] = `
Array [
  <div
    className="btn-group"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="dropdown-toggle btn btn-secondary"
      onClick={[Function]}
      type="button"
    >
      Category
    </button>
    <div
      aria-hidden={true}
      className="dropdown-menu dropdown-menu-right"
      role="menu"
      tabIndex="-1"
    >
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Programming languages
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Linters
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Code analysis
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        External services
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Reports and stats
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Other
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Demos
      </button>
    </div>
  </div>,
  " ",
  <div
    className="btn-group"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="dropdown-toggle btn btn-secondary"
      onClick={[Function]}
      type="button"
    >
      Options
    </button>
    <div
      aria-hidden={true}
      className="dropdown-menu dropdown-menu-right"
      role="menu"
      tabIndex="-1"
    >
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Show enabled extensions
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Show disabled extensions
      </button>
    </div>
  </div>,
]
`;

exports[`ExtensionsQueryInputToolbar shows category in query as selected 1`] = `
Array [
  <div
    className="btn-group"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="dropdown-toggle btn btn-secondary"
      onClick={[Function]}
      type="button"
    >
      Category
    </button>
    <div
      aria-hidden={true}
      className="dropdown-menu dropdown-menu-right"
      role="menu"
      tabIndex="-1"
    >
      <button
        className="disabled dropdown-item"
        disabled={true}
        onClick={[Function]}
        tabIndex="-1"
        type="button"
      >
        Programming languages
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Linters
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Code analysis
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        External services
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Reports and stats
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Other
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Demos
      </button>
    </div>
  </div>,
  " ",
  <div
    className="btn-group"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="dropdown-toggle btn btn-secondary"
      onClick={[Function]}
      type="button"
    >
      Options
    </button>
    <div
      aria-hidden={true}
      className="dropdown-menu dropdown-menu-right"
      role="menu"
      tabIndex="-1"
    >
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Show enabled extensions
      </button>
      <button
        className="dropdown-item"
        disabled={false}
        onClick={[Function]}
        role="menuitem"
        tabIndex="0"
        type="button"
      >
        Show disabled extensions
      </button>
    </div>
  </div>,
]
`;
